<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8BDBD"
    tools:context=".ragister.RegisterPage">

    <!--    <ImageView-->
    <!--        android:id="@+id/imgid"-->
    <!--        android:layout_width="226dp"-->
    <!--        android:layout_height="94dp"-->
    <!--        android:layout_alignParentStart="true"-->
    <!--        android:layout_alignParentEnd="true"-->
    <!--        android:layout_marginStart="92dp"-->
    <!--        android:layout_marginTop="26dp"-->
    <!--        android:layout_marginEnd="92dp"-->
    <!--        android:background="@drawable/logo" />-->

    <TextView
        android:id="@+id/textview"
        android:layout_width="220dp"
        android:layout_height="84dp"
        android:layout_above="@+id/divider"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="-1dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="#A31D1D"
        android:textSize="40sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider"
        android:layout_width="294dp"
        android:layout_height="5dp"
        android:layout_above="@+id/username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="30dp"
        android:background="@color/red" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_above="@+id/department"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="#6F000000" />

    <EditText
        android:id="@+id/department"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_above="@+id/rollNo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Department"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="#6F000000" />

    <EditText
        android:id="@+id/rollNo"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_above="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Rollno"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="#6F000000" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_above="@+id/phone"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#6F000000" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_above="@+id/register"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Phone Number"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint="#6F000000" />

    <Button
        android:id="@+id/register"
        android:layout_width="175dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="113dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="#BD3535"
        android:ems="10"
        android:gravity="center"
        android:text="@string/register"
        android:textStyle="bold" />


</RelativeLayout>