<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8BDBD"
    android:gravity="center"
    tools:context=".login.Mit_Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="643dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="43dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="43dp"
            android:gravity="center"
            android:text="@string/Login"
            android:textColor="#A31D1D"
            android:textSize="40sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="294dp"
            android:layout_height="4dp"
            android:layout_below="@+id/textview"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="57dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="60dp"
            android:background="@color/red" />

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_below="@+id/divider"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="87dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="87dp"
            android:autofillHints="username"
            android:ems="10"
            android:gravity="center"
            android:hint="Phone Number"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="#6F000000" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_below="@+id/username"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="87dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="87dp"
            android:autofillHints="password"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="#6F000000" />

        <Button
            android:id="@+id/login"
            android:layout_width="175dp"
            android:layout_height="64dp"
            android:layout_below="@+id/password"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="115dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="115dp"
            android:backgroundTint="#BD3535"
            android:ems="10"
            android:gravity="center"
            android:text="@string/Loginbtn"
            android:textStyle="bold" />

        <Button
            android:id="@+id/registerbtn"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_below="@+id/login"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="52dp"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="69dp"
            android:layout_marginBottom="137dp"
            android:backgroundTint="#D8BDBD"
            android:ems="10"
            android:gravity="center"
            android:text="@string/registertext"
            android:textColor="#A31D1D" />

        <Button
            android:id="@+id/btnSpeak"
            android:layout_width="wrap_content"
            android:layout_height="78dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="157dp"
            android:layout_marginEnd="144dp"
            android:layout_marginBottom="44dp"
            android:background="@drawable/voiceicon" />
    </RelativeLayout>

</RelativeLayout>